@@ -7,7 +7,8 @@ COMPILER_FLAGS = -Wall -Wfatal-errors
 INCLUDE_PATH = -I"./libs"
 SRC_FILES = ./src/*cpp \
 			./src/Game/*.cpp \
-			./src/Logger/*.cpp
+			./src/Logger/*.cpp \
+			./src/ECS/*.cpp
 LINKER_FLAGS = -lSDL2 -lSDL2_image -lSDL_ttf -lSDL2_mixer -llua
 OBJ_NAME = gameengine
 
