@@ -1,5 +1,6 @@
 #include "Game.h"
 #include "../Logger/Logger.h"
+#include "../ECS/ECS.h"
 #include <iostream>
 
 Game::Game() {
@@ -71,12 +72,12 @@ void Game::ProcessInput() {
     }
 }
 
-glm::vec2 playerPositon;
-glm::vec2 playerVelocity;
-
 void Game::Setup() {
-    playerPositon = glm::vec2(10.0, 20.0);
-    playerVelocity = glm::vec2(100.0, 0.0);
+    // TODO:
+    // Entity tank = registry.CreateEntity();
+    // tank.AddComponent<TransformComponent>();
+    // tank.AddComponent<BoxColliderComponent>();
+    // tank.AddComponent<SpriteComponent>("./assets/images/tank.png");
 }
 
 void Game::Update() {
@@ -92,26 +93,17 @@ void Game::Update() {
     // Store the "previous" frame time
     millisecsPreviousFrame = SDL_GetTicks();
 
-    playerPositon.x += playerVelocity.x * deltaTime;
-    playerPositon.y += playerVelocity.y * deltaTime;
+    // TODO: 
+    // MovementSystem.Update();
+    // CollisionSystem.Update();
+    // DamageSystem.Update();
 }
 
 void Game::Render() {
     SDL_SetRenderDrawColor(renderer, 21, 21, 21, 255);
     SDL_RenderClear(renderer);
 
-    // Draw a PNG texture
-    SDL_Surface* surface = IMG_Load("./assets/images/tank-tiger-right.png");
-    SDL_Texture* texture = SDL_CreateTextureFromSurface(renderer, surface);
-    SDL_FreeSurface(surface);
-    SDL_Rect dstRect = {
-        static_cast<int>(playerPositon.x), 
-        static_cast<int>(playerPositon.y), 
-        32, 
-        32
-    };
-    SDL_RenderCopy(renderer, texture, NULL, &dstRect);
-    SDL_DestroyTexture(texture);
+    // TODO: Render game objects
 
     SDL_RenderPresent(renderer);
 }
