@@ -1,0 +1,21 @@
+#ifndef MOVEMENTSYSTEM_H
+#define MOVEMENTSYSTEM_H
+
+class MovementSystem: public System {
+    public:
+        MovementSystem() {
+            // TODO: 
+            // RequireComponent<TransformComponent>();
+            // RequireComponent< ... >();
+        }
+
+        void Update() {
+            // TODO:
+            // Loop all entities that the system is interested in
+            // for (auto entity: GetEntities()){
+                // TODO: Update entity position based on its velocity
+            // }
+        }
+};
+
+#endif
